--- a/mirrorfashion/css/home.css
+++ b/mirrorfashion/css/home.css
@@ -138,3 +138,23 @@
 .mais-vendidos{
     background-color: #dcdcf5;
 }
+
+/*mobile*/
+@media (max-width: 630px){
+    .busca,
+    .menu-departamentos,
+    .departamentos-busca,
+    .painel,
+    .banner-destaque{
+        width: 100%;
+        margin-right: 0;
+    }
+
+    .busca,
+    .menu-departamentos{
+        text-align: center;
+    }
+    .painel li{
+        width: 30%;
+    }
+}
