--- a/mirrorfashion/css/contato.css
+++ b/mirrorfashion/css/contato.css
@@ -50,3 +50,14 @@
     font-size: 12px;
     font-style: italic;
 }
+
+@media (max-width: 630px){
+    .painel-contato{
+        width: 100%;
+        margin: 0 15px;
+    }
+
+    .pagina-contato form{
+        margin-bottom: 30px;
+    }
+}
