--- a/mirrorfashion/css/geral.css
+++ b/mirrorfashion/css/geral.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800|Roboto:400,700,900&display=swap');
+
 *{
     box-sizing: border-box;
 }
 
 body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
     font-size: 16px;
 }
 
@@ -98,6 +101,8 @@ $= termina com
 
 /*Cabeçalhos padrão*/
 .cabecalho{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 800;
     font-size: 25px;
     padding: 15px;
     background-image: url('../img/sobre-background.jpg');
